--- a/gatsby-client/src/styles/globals.css
+++ b/gatsby-client/src/styles/globals.css
@@ -3,3 +3,21 @@
 @tailwind utilities;
 
 /* Add any global styles here */
+
+@font-face {
+  font-family: 'Regular';
+  src: url('./HKGrotesk-Regular.ttf') format('opentype');
+}
+@font-face {
+  font-family: 'Light';
+  src: url('./HKGrotesk-Light.ttf') format('opentype');
+}
+@font-face {
+  font-family: 'Bold';
+  src: url('./HKGrotesk-Bold.ttf') format('opentype');
+}
+
+@font-face {
+  font-family: 'Legacy';
+  src: url('./HKGrotesk-BoldLegacy.ttf') format('opentype');
+}
